--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 </p>
-                    <a href="#">Download CV</a>
+                    <a href="https://dpakmrya.github.io/cv/">View CV</a>
                 </div>
             </div>
         </div>
